<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Brookcomrec</string>
    <string name="brooklyn_community_recipes">Brooklyn Community Recipes</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_e_mail">Remember E-mail</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_click_here_for_guest_mode">Don\'t have an Account Click here for Guest Mode</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="featured_communities">Featured Communities</string>
    <string name="bedford_stuyvesant">Bedford-Stuyvesant</string>
    <string name="bushwick">Bushwick</string>
    <string name="greenpoint">Greenpoint</string>
    <string name="williamsburg">Williamsburg</string>
    <string name="join_community1">Join Community</string>
    <string name="join_community2">Join Community</string>
    <string name="join_community3">Join Community</string>
    <string name="join_community4">Join Community</string>
    <string name="Camera">TODO</string>
    <string name="camera">CAMERA</string>
    <string name="Photo">PHOTO</string>
    <string name="Upload">UPLOAD</string>
    <string name="camera_">Camera</string>
    <string name="Search">SEARCH</string>
    <string name="User">USER</string>
    <string name="recipes">Recipes</string>
    <string name="_50_williamsburg_members">50 Williamsburg Members</string>
    <string name="amber">Amber</string>
    <string name="eric">Eric</string>
    <string name="chelly">Chelly</string>
    <string name="michelle">Michelle</string>
    <string name="franny">Franny</string>
    <string name="Com">COM</string>
    <string name="Comm">COMM</string>
    <string name="food1">Food</string>
    <string name="food2">Food2</string>
    <string name="sean">Sean</string>
    <string name="food3">Food3</string>
    <string name="food5">FOOD5</string>
    <string name="ties">TIES</string>
    <string name="ss">SS</string>
    <string name="sfish">SFISH</string>
    <string name="use">USE</string>
    <string name="like">LIKE</string>
    <string name="pescado_con_coco">Pescado con Coco</string>
    <string name="arrow">ARROW</string>
    <string name="share">SHARE</string>
    <string name="aro">ARO</string>
    <string name="down">DOWN</string>
    <string name="pescado_con_coco_recipe_fish_in_coconut_sauce_bring_the_beauty_of_the_stunning_samana_bay_to_your_kitchen_with_this_exotic_mix_of_fresh_fish_and_coconut">Pescado con Coco Recipe (Fish in Coconut Sauce): Bring the beauty of the stunning Samana Bay to your kitchen with this exotic mix of fresh fish and coconut.</string>
    <string name="recpy">RECPY</string>
    <string name="type">type here</string>
    <string name="food8">FOOD8</string>
    <string name="play1">PLAY1</string>
    <string name="thm">THM</string>
    <string name="sharing">SHARING</string>
    <string name="dn">DN</string>
    <string name="plato">PLATO</string>
    <string name="food9">FOOD9</string>
    <string name="imgi">IMGI</string>
</resources>