<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    android:textAlignment="center"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="54dp"
        android:layout_height="25dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/amber"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="54dp"
        android:layout_height="25dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/eric"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="54dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/chelly"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="92dp"
        android:background="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/brooklyn_community_recipes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="186dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:text="@string/recipes"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="499dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Search"
            app:srcCompat="@android:drawable/ic_search_category_default" />
    </SearchView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="217dp"
        android:layout_height="29dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/roboto"
        android:text="@string/_50_williamsburg_members"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="54dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="72dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sean"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="62dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="240dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/michelle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="58dp"
        android:layout_height="24dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/franny"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="661dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/food3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/food1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="548dp"
        android:layout_height="159dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/food5"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:srcCompat="@drawable/food5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="109dp"
        android:layout_height="123dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="211dp"
        android:contentDescription="@string/ties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:srcCompat="@drawable/ties" />

</androidx.constraintlayout.widget.ConstraintLayout>