<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    tools:context=".MainActivity6">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="92dp"
        android:background="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/brooklyn_community_recipes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="501dp"
        android:layout_height="201dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/food8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474"
        app:srcCompat="@drawable/recp1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="525dp"
        android:layout_height="264dp"
        android:contentDescription="@string/food9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/recp2" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="116dp"
        android:layout_height="112dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/plato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/s_fish" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/pescado_con_coco"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:background="@color/black"
        android:contentDescription="@string/dn"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="14dp"
        android:background="@color/black"
        android:contentDescription="@string/play1"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="17dp"
        android:background="@color/black"
        android:contentDescription="@string/sharing"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="174dp"
        android:contentDescription="@string/thm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:srcCompat="@drawable/hand" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:srcCompat="@drawable/use"
        android:contentDescription="@string/imgi" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/imageView9"
        android:text="@string/sean"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>