<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity2">

      <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="44dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/join_community4"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="44dp"
        android:background="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/join_community2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="44dp"
        android:background="@color/white"
        android:fontFamily="@font/roboto"
        android:outlineAmbientShadowColor="@color/white"
        android:text="@string/join_community3"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="204dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/bushwick"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="204dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/greenpoint"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="204dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/williamsburg"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginEnd="92dp"
        android:background="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/brooklyn_community_recipes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="453dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/featured_communities"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="204dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="117dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/bedford_stuyvesant"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="44dp"
        android:background="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/join_community1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="127dp"
        android:layout_height="96dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:background="@color/black"
        android:contentDescription="@string/Photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="127dp"
        android:layout_height="96dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="44dp"
        android:background="@color/black"
        android:contentDescription="@string/Upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:srcCompat="@android:drawable/ic_menu_upload" />


</androidx.constraintlayout.widget.ConstraintLayout>