<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginEnd="92dp"
        android:background="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/brooklyn_community_recipes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="422dp"
        android:layout_height="48dp"
        android:layout_marginEnd="56dp"
        android:background="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/e_mail"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="422dp"
        android:layout_height="48dp"
        android:layout_marginEnd="56dp"
        android:background="@color/white"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/password"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="59dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="232dp"
        android:background="#2196F3"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="278dp"
        android:fontFamily="@font/roboto"
        android:minHeight="48dp"
        android:text="@string/remember_e_mail"
        android:textColor="#03A9F4"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="409dp"
        android:layout_height="52dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="246dp"
        android:fontFamily="@font/roboto"
        android:text="@string/don_t_have_an_account_click_here_for_guest_mode"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="209dp"
        android:text="@string/forget_password"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>